[package]
name = "process-owned"
version = "0.1.0"
edition = "2021"
description = "Assign ownership of a value to the process itself"
homepage = "https://github.com/carlosskii/process-owned"
repository = "https://github.com/carlosskii/process-owned"
documentation = "https://docs.rs/process-owned"
readme = "README.md"
license = "MIT"
keywords = [
  "process",
  "lifetime",
  "ownership"
]
exclude = [
  "tests"
]

[dependencies]
